# Rechnernetze-und-verteilte-Systeme

./: .gitignore  README.md
praxis0/praxis0/RN-Praxis-0.1.1-Source/: ._CMakeLists.txt  ._hello_world.c  ._requirements.txt  CMakeLists.txt
praxis0/praxis0/RN-Praxis-0.1.1-Source/test/: ._util.py
praxis0/praxis0/rn-praxis0/: CMakeLists.txt
praxis1-vscode/: CMakeLists.txt  beejes_webserver  beejes_webserver.c  helper_functions.h  server_sructs.h  webserver  webserver.c  webserver_old.c
praxis1/RN-Praxis-0.1.1-Source/: CMakeLists.txt  group.txt  readme.md  webserver.c
praxis1/RN-Praxis-0.1.1-Source/test/: ._test_praxis1.py  test_praxis1.py
praxis1/praxis1/: CMakeLists.txt  vladi - personal notes  webserver.c
praxis2/: myTest_dht.py  send_udp.py  webserver.c
praxis2/test/: test_praxis2.py
praxis3/: CMakeLists.txt  test_complex_text.txt  test_simple_text.txt  zmq_distributor.c  zmq_generics.h  zmq_worker.c
praxis3/praxis3/: CMakeLists.txt  testfile.txt  zmq_distributor.c  zmq_worker.c
praxis3/test/: check_submission.sh
